# library_management

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
library_management/: hooks.py  modules.txt  patches.txt
library_management.egg-info/: PKG-INFO  SOURCES.txt
library_management/config/: desktop.py  docs.py
library_management/library_management/: tasks.py
library_management/library_management/dashboard/library_dashboard/: library_dashboard.json
library_management/library_management/dashboard_chart/books_issued_per_month/: books_issued_per_month.json
library_management/library_management/dashboard_chart/fine_collection_trend/: fine_collection_trend.json
library_management/library_management/dashboard_chart/member_type_distribution/: member_type_distribution.json
library_management/library_management/doctype/book/: book.js  book.json  book.py
library_management/library_management/doctype/book_category/: book_category.json  book_category.py
library_management/library_management/doctype/book_rack/: book_rack.json  book_rack.py
library_management/library_management/doctype/fine_payment_detail/: fine_payment_detail.json  fine_payment_detail.py
library_management/library_management/doctype/library_book_issue/: library_book_issue.js  library_book_issue.json  library_book_issue.py
library_management/library_management/doctype/library_fine/: library_fine.json  library_fine.py
library_management/library_management/doctype/library_member/: library_member.js  (+2 more)
library_management/module_def/library_management/: library_management.json
(+37 files in other folders)
